# radicc

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README-ja.md  README.md  THIRD_PARTY_NOTICES.md  radicc.toml
.github/workflows/: ci.yml  docker-cli.yml
config/: dot_env.example  env.example  radicc.toml.example  radico.toml.example
docker/: .dockerignore  Dockerfile  Dockerfile.cli  docker-compose.cli.yml  docker-compose.yml.example  run.sh
scripts/: radicc-fzf.sh
scripts/gas/: .env.example  .gitignore  README-ja.md  README.md  package-lock.json  package.json
scripts/gas/scripts/: esbuild.mjs  generate-env.mjs  prebuild.mjs  sync-manifest.mjs
scripts/gas/src/: config.ts  env.ts.in  main.ts
scripts/gas/src/app/: daily_recording.ts  initialise.ts  program_resolver.ts  recording.ts
scripts/gas/src/radicc/: api.ts
scripts/gas/src/radiko/: api.ts
scripts/gas/src/schedule/: normalise.ts
scripts/gas/src/spreadsheet/: common.ts  programs.ts  record_logs.ts
scripts/gas/src/storage/: drive.ts
scripts/gas/src/tests/: manual.ts
src/: arguments_handler.cpp  arguments_handler.h  date_handler.cpp  date_handler.h  env_loader.cpp  env_loader.h  list_config.cpp  list_config.h  main.cpp  radiko_recorder.cpp  radiko_recorder.h  toml_parser.cpp  toml_parser.h  url_parser.cpp  url_parser.h
src/app/: command_options.h  common.cpp  common.h  list_command.cpp  list_command.h  output_path.cpp  output_path.h  record_command.cpp  record_command.h  record_resolver.cpp  record_resolver.h
src/cli/: arguments.cpp  arguments.h
src/core/: radiko_auth.cpp  radiko_auth.h  radiko_http.cpp  radiko_http.h  radiko_programs.cpp  radiko_programs.h  radiko_programs_date.cpp  radiko_programs_xml.cpp  radiko_programs_xml.h  radiko_recorder.cpp  radiko_recorder.h  radiko_stream.cpp  radiko_stream.h  toml_parser.cpp  toml_parser.h  url_parser.cpp  url_parser.h
src/server/: main.cpp
src/service/: record_service.cpp  record_service.h
src/tools/: fetch.cpp
src/utils/: base64.cpp  base64.h  date.cpp  date.h  env_loader.cpp  env_loader.h
tests/: app_tests.cpp
tmp_config/radicc/: radicc.toml
